@@ -10,6 +10,9 @@ Version 8.39 xx-xxxxxx-201x
 1.  If PCRE_AUTO_CALLOUT was set on a pattern that had a (?# comment between 
     an item and its qualifier (for example, A(?#comment)?B) pcre_compile() 
     misbehaved. This bug was found by the LLVM fuzzer.
+    
+2.  Further to 8.38/46, negated classes such as [^[:^ascii:]\d] were also not 
+    working correctly in UCP mode.
 
 
 Version 8.38 23-November-2015
